@@ -8,6 +8,10 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2012-08-19 18:52 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * source/rdd/dbf1.c
+    ! bug fix in Foxpro DBFCDX after appending record with memo field (reported
+    by Grzegorz in comp.lang.xharbour)
 
 2012-08-17 10:20  UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
   * contrib/jpeg/jmorecfg.h
